--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+=================================================<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -98,7 +98,7 @@ const loadProfile = async () => {
     }
 
     try {
-        const response = await fetch(`http://localhost:5000/api/profile/${userId}`, {
+        const response = await fetch(`https://jobportalapi-0gfs.onrender.com/api/profile/${userId}`, {
             method: "GET",
             headers: {
                 "Authorization": `Bearer ${token}`
