--- a/profile-view.html
+++ b/profile-view.html
@@ -167,7 +167,7 @@ document.addEventListener("DOMContentLoaded", async () => {
         try {
             console.log("📡 Sending logout request to API...");
 
-            const response = await fetch("http://localhost:5000/api/logout", {
+            const response = await fetch("https://jobportalapi-0gfs.onrender.com/api/logout", {
                 method: "POST",
                 headers: { 
                     "Content-Type": "application/json",
