Resolved merge conflicts

--- a/jobs.html
+++ b/jobs.html
@@ -9,6 +9,7 @@
     
     <!-- ✅ Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Manrope:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <!-- ✅ JavaScript Files -->
     <script defer type="module" src="src/js/navbar.js"></script> 
