--- a/mange.html
+++ b/mange.html
@@ -88,7 +88,7 @@
     const userId = decodedToken.userId;
 
     try {
-        const response = await fetch(`http://localhost:5000/api/jobs/user/${userId}`, {
+        const response = await fetch(`https://jobportalapi-0gfs.onrender.com/api/jobs/user/${userId}`, {
             method: 'GET',
             headers: { 'Authorization': `Bearer ${token}` }
         });
